# nlp_course_final_task

./: .gitignore  default_params.yaml  environment.yaml  pyproject.toml  setup.sh
data/task_2.1/: dev.json  train.json
data/task_2.2/: dev.json  train.json
src/: constants.py  utils.py
src/datasets/: argument_relation_detection_dataset.py  claim_detection_dataset.py  text_classification_dataset.py
src/models/: classification_bert.py
src/training/: argument_relation_detection.py  claim_detection.py  trainer.py
