[tool.black]
line-length = 100
target-version = ['py310']
include = '\.py$'
exclude = '''
/(
  | \.git
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.poetry]
name = "nlp_task"
version = "0.0.0"
description = ""
authors = ["Antoni Maciag <antoni.maciag1@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "torchcpu"
url = "https://download.pytorch.org/whl/cpu/"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "~3.10"
torch = { version = "2.1.1+cpu", source = "torchcpu" }

black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
transformers = "*"
datasets = "*"
sentence_transformers = "*"
nltk = "*"
